# pysweet-func

./: .readthedocs.yaml  LICENSE  README.md  README.rst  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst  introduction.rst  pysweet.rst
pysweet/: __init__.py  block.py  expression.py  func.py  iterable.py  types.py  value.py
test/: test_block.py  test_expression.py  test_func.py  test_iterable.py  test_value.py
