[tool.poetry]
name = "pysweet-func"
version = "1.0.3"
description = "Light syntactic sugar for composable Python programs"
authors = ["Nat Sothanaphan <natsothanaphan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/natso26/pysweet-func"
keywords = ["functional", "utility"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    { include = "pysweet" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
