[tool.poetry]
name = "pysweet-func"
version = "1.1.3"
description = "Composable Python via syntactic sugar"
authors = ["Nat Sothanaphan <natsothanaphan@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/natso26/pysweet-func"
documentation = "https://pysweet-func.readthedocs.io"
keywords = ["utility", "functional"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    { include = "pysweet" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
